@@ -153,6 +153,7 @@
     <ProjectReference type="Assembly" localcopy="True" refto="../../build/bin/MonoDevelop.Core.dll" />
     <ProjectReference type="Assembly" localcopy="True" refto="../../build/bin/MonoDevelop.Ide.dll" />
     <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Deployment.Linux" />
+    <ProjectReference type="Assembly" localcopy="True" refto="../../build/AddIns/MonoDevelop.Deployment.Linux.dll" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" SyncReferences="True">
     <BuildFilesVar Sync="True" Name="FILES" />
@@ -163,6 +164,6 @@
     <AsmRefVar Sync="True" Name="REFS" Prefix="-r:" />
     <ProjectRefVar Sync="True" Name="REFS" Prefix="-r:" />
   </MonoDevelop.Autotools.MakefileInfo>
-  <GtkDesignInfo partialTypes="True" />
   <Deployment.LinuxDeployData scriptName="cbinding" />
+  <GtkDesignInfo partialTypes="True" />
 </Project>
